Alignment zigzag fix?

--- a/css/theme.css
+++ b/css/theme.css
@@ -468,7 +468,7 @@ img, svg {
 }
 
 .fw-bold {
-  font-weight: 700 !important;
+  font-weight: 550 !important;
 }
 
 .text-center {
